--- a/utils/package.xml
+++ b/utils/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>mesh_bgk</name>
+  <name>utils</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="melancholycy@gmail.com">melancholycy</maintainer>
@@ -10,7 +10,15 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <!-- dependence begin -->  
-  <depend>utils</depend>
+  <depend>rclcpp</depend>
+  <depend>rclcpp_components</depend> 
+  <depend>std_msgs</depend>   
+  <depend>nav_msgs</depend>   
+  <depend>sensor_msgs</depend>
+  <depend>geometry_msgs</depend> 
+  <depend>visualization_msgs</depend> 
+  
+  <depend>pcl_ros</depend>  
   <!-- dependence end -->
 
   <test_depend>ament_lint_auto</test_depend>
