--- a/mesh_bgk/config/params.yaml
+++ b/mesh_bgk/config/params.yaml
@@ -1,2 +1,14 @@
 /mesh_bgk_node:
-  ros__parameters:
+  ros__parameters:    
+    #! sensor
+    range_max: 10.0
+    map_res: 0.1
+    # sensor_range_min: 1
+
+    #! bgk  
+    bgk: 
+      kernel_len: 1.2
+      kernel_scalar: 1.0
+
+
+
