--- a/utils/package.xml
+++ b/utils/package.xml
@@ -19,6 +19,7 @@
   <depend>visualization_msgs</depend> 
   
   <depend>pcl_ros</depend>  
+  <depend>pcl_conversions</depend>  
   <!-- dependence end -->
 
   <test_depend>ament_lint_auto</test_depend>
